Close #669